main/bin/main.103992.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl" -Xclang -O3 -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=201 -Xclang -ivfsoverlay-lib/root/intelFPGA_pro/20.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device"
Setting target instruction set architecture to: Default (Intel(R) Advanced Vector Extensions 2 (Intel(R) AVX2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:32:2: error: unknown type name 'InfStat'
        InfStat inf;
        ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:33:6: error: bit-fields are not supported in OpenCL
        int esocdist_comply : 1;
            ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:34:6: error: bit-fields are not supported in OpenCL
        int keyworker : 1;                              // also used to binary index cumI_keyworker[] and related arrays
            ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:35:6: error: bit-fields are not supported in OpenCL
        int to_die : 1;
            ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:36:6: error: bit-fields are not supported in OpenCL
        int detected : 1; //added hospitalisation flag: ggilani 28/10/2014, added flag to determined whether this person's infection is detected or not
            ^
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
